service-mesh/port-naming/examples/constraint.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://raw.githubusercontent.com/GoogleCloudPlatform/acm-policy-controller-library/master/anthos-service-mesh/port-naming/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: AllowedServicePortName
metadata:
  name: port-name-constraint
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    # namespaces: ["default"]
    # alternatively you can limit it to namespaces where istio-injection is enabled
    # namespaceSelector:
    #   matchExpressions:
    #     - key: istio-injection
    #       operator: In
    #       values: ["enabled"]
  parameters:
    prefixes: ["http-", "http2-", "grpc-", "mongo-", "redis-", "tcp-"]
