service-mesh/port-naming/examples/port-name-bad.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# https://github.com/GoogleCloudPlatform/acm-policy-controller-library/blob/master/anthos-service-mesh/port-naming/example.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-bad
  labels:
    app: helloworld
spec:
  ports:
  - port: 5000
    name: helloport
  selector:
    app: helloworld
