service-mesh/port-naming/examples/port-name-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-http
  labels:
    app: helloworld
spec:
  ports:
  - port: 5000
    name: http-helloport
  selector:
    app: helloworld
