service-mesh/port-naming/examples/port-name-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-name-tcp
  labels:
    app: helloworld
spec:
  ports:
  - port: 5000
    name: tcp-helloport
  selector:
    app: helloworld
